--- a/pages/pk/singleLocation/singleLocation.wxml
+++ b/pages/pk/singleLocation/singleLocation.wxml
@@ -12,8 +12,8 @@
   <view class="rcs " style="height:32px">
 
       <view class="rcc h-32px ">
-          <image class="h-40 w-40" mode="aspectFit" src="/images/daka.png"></image>
-          <view class="fs-30 fw-700 c-word-6 f-shadow3">{{mode===0?'搜索卡点':'创建卡点'}}</view>
+          <!-- <image class="h-40 w-40" mode="aspectFit" src="/images/daka.png"></image> -->
+          <view class="fs-30 fw-700 c-4 f-shadow3">{{mode===0?'搜索卡点':'创建卡点'}}</view>
       </view>
 
   </view>
@@ -238,7 +238,15 @@
               <image class="w-30 h-30" mode="aspectFit" src="/images/more.png"></image>
             </view>
         </view>
- 
+        <view class="rbc-nowrap pt-20 pb-20" >
+            <view class="rcs w-300 fs-30 fw-400">打卡范围</view>
+            <view class="rcs">
+                <view class="rcc w-80 h-60 br-10 b-48 fs-35 fw-700" bindtap="decr">-</view>
+                <view class="rcc fs-30 fw-300 c-4 pl-20 pr-20">{{circles[0].radius}}</view>
+                <view class="rcc w-80 h-60 br-10 b-48 fs-35 fw-700" bindtap="incr">+</view>
+
+            </view>
+        </view>
 
         <view class="rbc-nowrap pt-20 pb-20">
             <view class="rcs w-300 fs-30 fw-400">详细地址</view>
